--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,9 +1,12 @@
 source 'https://github.com/gaojinhsu/PodTestLibSpecs.git'
+source 'http://git.code.oa.com/greysongjxu/TDataMasterSpecs.git'
 
 platform :ios, '8.0'
 
 target 'PodTestLib_Example' do
   pod 'PodTestLib', :path => '../'
+  
+#   pod 'PodTestLib', '0.3.0'
 
   target 'PodTestLib_Tests' do
     inherit! :search_paths
