--- a/Example/Podfile
+++ b/Example/Podfile
@@ -4,9 +4,9 @@ source 'http://git.code.oa.com/greysongjxu/TDataMasterSpecs.git'
 platform :ios, '8.0'
 
 target 'PodTestLib_Example' do
-#  pod 'PodTestLib', :path => '../'
+  pod 'PodTestLib', :path => '../'
   
-   pod 'PodTestLib', '0.4.0'
+#   pod 'PodTestLib', '0.5.0'
 
   target 'PodTestLib_Tests' do
     inherit! :search_paths
